--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,15 @@
-name: Acme
-version: 1.1111
-abstract: The Base of Perfection
-author: Brian Ingerson <ingy@cpan.org>
-license: perl
+
+no_index: 
+  directory: 
+    - inc
+    - t
+generated_by: Module::Install version 0.54
 distribution_type: module
-requires:
+version: 1.11111
+name: Acme
+author: "Ingy d\xC3\xB6t Net <ingy@cpan.org>"
+license: perl
+requires: 
   perl: 5.6.1
   Spiffy: 0.14
-no_index:
-  directory:
-    - inc
-generated_by: Module::Install version 0.36
+abstract: The Base of Perfection
