--- a/META.yml
+++ b/META.yml
@@ -2,25 +2,27 @@
 abstract: 'The Base of Perfection'
 author:
   - 'Ingy döt Net <ingy@cpan.org>'
-build_requires:
-  ExtUtils::MakeMaker: 6.42
+build_requires: {}
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 1.00'
+  ExtUtils::MakeMaker: '6.30'
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.132830'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-module_name: Acme
+  version: '1.4'
 name: Acme
 no_index:
   directory:
     - inc
     - t
+    - xt
+    - example
 requires:
-  Spiffy: 0.14
-  perl: 5.6.1
+  Spiffy: '0'
+  perl: v5.8.1
 resources:
-  license: http://dev.perl.org/licenses/
-version: 1.111111
+  bugtracker: https://github.com/ingydotnet/acme-pm/issues
+  homepage: https://github.com/ingydotnet/acme-pm
+  repository: https://github.com/ingydotnet/acme-pm.git
+version: '1.1111111'
